--- a/Service/登录/SELoginViewController.xib
+++ b/Service/登录/SELoginViewController.xib
@@ -13,6 +13,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SELoginViewController" customModule="Service" customModuleProvider="target">
             <connections>
+                <outlet property="accountTextField" destination="z2K-yH-zEE" id="LlO-Ca-T7G"/>
+                <outlet property="ipSettingBtn" destination="aZN-yc-U5U" id="XDG-aN-pdQ"/>
+                <outlet property="logImageView" destination="9gf-Av-Uo0" id="TtE-KZ-195"/>
+                <outlet property="logTitleLabel" destination="OyK-wr-Swx" id="yNl-Dm-U7j"/>
+                <outlet property="loginBtn" destination="siU-39-7dJ" id="Mzu-q7-vf0"/>
+                <outlet property="passwordTextField" destination="CNg-En-wuA" id="wmx-u3-wCf"/>
+                <outlet property="severIPLabel" destination="PaB-6a-e9e" id="iXY-V3-rFl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -46,6 +53,9 @@
                                 <constraint firstAttribute="width" constant="60" id="z1s-Pt-pe5"/>
                             </constraints>
                             <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="goSettingSeverIP:" destination="-1" eventType="touchUpInside" id="2zW-0C-W0w"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PaB-6a-e9e">
                             <rect key="frame" x="20" y="10" width="275" height="40"/>
@@ -93,6 +103,9 @@
                                 <constraint firstAttribute="height" constant="30" id="8M2-xc-Ram"/>
                             </constraints>
                             <state key="normal" title="Button"/>
+                            <connections>
+                                <action selector="goLoginAction:" destination="-1" eventType="touchUpInside" id="Av6-pk-yau"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
