--- a/Service/设置/SESettingHostViewController.xib
+++ b/Service/设置/SESettingHostViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SESettingHostViewController" customModule="Service" customModuleProvider="target">
             <connections>
+                <outlet property="hostTextField" destination="nYI-h5-eFB" id="W0j-aD-PSe"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
