--- a/Service/报修/SEImageCollectionViewCell.xib
+++ b/Service/报修/SEImageCollectionViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ti9-58-9c3">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="关于我们" translatesAutoresizingMaskIntoConstraints="NO" id="ti9-58-9c3">
                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                     </imageView>
                 </subviews>
@@ -31,6 +31,12 @@
                 <constraint firstAttribute="bottom" secondItem="ti9-58-9c3" secondAttribute="bottom" id="yGC-5A-Vk9"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <connections>
+                <outlet property="imageView" destination="ti9-58-9c3" id="r8G-us-Jsg"/>
+            </connections>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="关于我们" width="29" height="29"/>
+    </resources>
 </document>
