--- a/Service/Other/SEListTableViewCell.xib
+++ b/Service/Other/SEListTableViewCell.xib
@@ -1,21 +1,79 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SEListTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="105" id="KGk-i7-Jjw" customClass="SEListTableViewCell" customModule="Service" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="104.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vP7-WC-C7x">
+                        <rect key="frame" x="0.0" y="0.0" width="30" height="104.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JFO-O7-yxh">
+                                <rect key="frame" x="0.0" y="0.0" width="30" height="104.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="8rb-5g-Ks8"/>
+                            <constraint firstItem="JFO-O7-yxh" firstAttribute="leading" secondItem="vP7-WC-C7x" secondAttribute="leading" id="bac-9H-PmM"/>
+                            <constraint firstAttribute="trailing" secondItem="JFO-O7-yxh" secondAttribute="trailing" id="d0S-Bh-byR"/>
+                            <constraint firstAttribute="bottom" secondItem="JFO-O7-yxh" secondAttribute="bottom" id="em7-Or-f2B"/>
+                            <constraint firstItem="JFO-O7-yxh" firstAttribute="top" secondItem="vP7-WC-C7x" secondAttribute="top" id="mf3-IK-y1a"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fWv-o1-3hy">
+                        <rect key="frame" x="30" y="0.0" width="290" height="104.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ana-fx-zU5">
+                                <rect key="frame" x="0.0" y="0.0" width="290" height="104.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Ana-fx-zU5" secondAttribute="trailing" id="AlK-MN-eIO"/>
+                            <constraint firstItem="Ana-fx-zU5" firstAttribute="top" secondItem="fWv-o1-3hy" secondAttribute="top" id="UNk-wl-0xe"/>
+                            <constraint firstItem="Ana-fx-zU5" firstAttribute="leading" secondItem="fWv-o1-3hy" secondAttribute="leading" id="hGr-gk-kgz"/>
+                            <constraint firstAttribute="bottom" secondItem="Ana-fx-zU5" secondAttribute="bottom" id="sJ9-i6-XDJ"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="fWv-o1-3hy" secondAttribute="bottom" id="3dQ-kp-cYE"/>
+                    <constraint firstItem="vP7-WC-C7x" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Hl8-Tg-JF0"/>
+                    <constraint firstAttribute="bottom" secondItem="vP7-WC-C7x" secondAttribute="bottom" id="k3Z-MJ-21x"/>
+                    <constraint firstItem="vP7-WC-C7x" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="mRF-07-c1p"/>
+                    <constraint firstAttribute="trailing" secondItem="fWv-o1-3hy" secondAttribute="trailing" id="tSF-Bt-fjl"/>
+                    <constraint firstItem="fWv-o1-3hy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="usy-nJ-dVK"/>
+                    <constraint firstItem="fWv-o1-3hy" firstAttribute="leading" secondItem="vP7-WC-C7x" secondAttribute="trailing" id="wg0-iR-KG2"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="indexLabel" destination="JFO-O7-yxh" id="Qki-J9-mDX"/>
+                <outlet property="indexView" destination="vP7-WC-C7x" id="969-3b-gdH"/>
+                <outlet property="label1" destination="Ana-fx-zU5" id="Xm6-hp-Wrw"/>
+            </connections>
+            <point key="canvasLocation" x="84" y="140.5"/>
         </tableViewCell>
     </objects>
 </document>
