--- a/Service/个人/SEPersonalTableViewController.xib
+++ b/Service/个人/SEPersonalTableViewController.xib
@@ -1,13 +1,22 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SEPersonalTableViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SEPersonalTableViewController" customModule="Service" customModuleProvider="target">
             <connections>
+                <outlet property="avatarImageView" destination="QDX-dk-Fbi" id="ubT-gj-7GH"/>
+                <outlet property="label1" destination="KYN-zc-ENJ" id="UUN-Jx-CBu"/>
+                <outlet property="label2" destination="CvK-gz-aOz" id="JXt-SH-pwf"/>
+                <outlet property="topView" destination="T6G-9c-x8b" id="2qZ-rK-RVn"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,10 +26,49 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="vLr-E1-eTs"/>
+            <view key="tableHeaderView" contentMode="scaleToFill" id="T6G-9c-x8b">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QDX-dk-Fbi">
+                        <rect key="frame" x="30" y="15" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="9Lu-CG-SHI"/>
+                            <constraint firstAttribute="width" secondItem="QDX-dk-Fbi" secondAttribute="height" id="VXz-8M-rCB"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYN-zc-ENJ">
+                        <rect key="frame" x="105" y="20" width="240" height="25"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CvK-gz-aOz">
+                        <rect key="frame" x="105" y="50" width="240" height="24.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" red="0.058823529409999999" green="0.30980392159999998" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
+                <constraints>
+                    <constraint firstItem="KYN-zc-ENJ" firstAttribute="top" secondItem="QDX-dk-Fbi" secondAttribute="top" constant="5" id="8GB-Kp-Kkd"/>
+                    <constraint firstItem="CvK-gz-aOz" firstAttribute="leading" secondItem="QDX-dk-Fbi" secondAttribute="trailing" constant="15" id="947-3x-7Yf"/>
+                    <constraint firstItem="CvK-gz-aOz" firstAttribute="height" secondItem="KYN-zc-ENJ" secondAttribute="height" id="9MH-Ng-amC"/>
+                    <constraint firstItem="QDX-dk-Fbi" firstAttribute="leading" secondItem="T6G-9c-x8b" secondAttribute="leading" constant="30" id="9bN-Tq-xeZ"/>
+                    <constraint firstItem="CvK-gz-aOz" firstAttribute="top" secondItem="KYN-zc-ENJ" secondAttribute="bottom" constant="5" id="Qz1-SR-1ZE"/>
+                    <constraint firstItem="KYN-zc-ENJ" firstAttribute="leading" secondItem="QDX-dk-Fbi" secondAttribute="trailing" constant="15" id="ZRP-dK-z4f"/>
+                    <constraint firstAttribute="trailing" secondItem="CvK-gz-aOz" secondAttribute="trailing" constant="30" id="h4L-Xl-Xkt"/>
+                    <constraint firstItem="CvK-gz-aOz" firstAttribute="baseline" secondItem="QDX-dk-Fbi" secondAttribute="baseline" constant="-5" id="mqs-YO-tas"/>
+                    <constraint firstAttribute="bottom" secondItem="QDX-dk-Fbi" secondAttribute="bottom" constant="15" id="rd5-y1-mGW"/>
+                    <constraint firstAttribute="trailing" secondItem="KYN-zc-ENJ" secondAttribute="trailing" constant="30" id="yl7-GW-m9F"/>
+                </constraints>
+            </view>
             <connections>
                 <outlet property="dataSource" destination="-1" id="Tng-2m-Rnh"/>
                 <outlet property="delegate" destination="-1" id="9aC-8N-iBw"/>
             </connections>
+            <point key="canvasLocation" x="84.5" y="109.5"/>
         </tableView>
     </objects>
 </document>
