--- a/Service/意见反馈/SEOpinionViewController.xib
+++ b/Service/意见反馈/SEOpinionViewController.xib
@@ -15,6 +15,7 @@
             <connections>
                 <outlet property="contentTextView" destination="oyX-Ff-bfv" id="JQu-hm-gSx"/>
                 <outlet property="submitBtn" destination="w9z-xW-QHc" id="hXZ-oy-8hn"/>
+                <outlet property="titleLabel" destination="PwS-dU-ouf" id="9XT-Gi-4bt"/>
                 <outlet property="titleTextField" destination="9YG-Op-EUG" id="hL4-sl-H8O"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -24,14 +25,46 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="640x960" translatesAutoresizingMaskIntoConstraints="NO" id="BZN-tv-Ggw">
-                    <rect key="frame" x="0.0" y="20" width="375" height="125"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QnG-W3-tgJ">
+                    <rect key="frame" x="0.0" y="20" width="375" height="187.5"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner2" translatesAutoresizingMaskIntoConstraints="NO" id="BZN-tv-Ggw">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="187.5"/>
+                        </imageView>
+                        <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FAS-uG-9Eg">
+                            <rect key="frame" x="0.0" y="147" width="375" height="40"/>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="X6w-dD-g9U"/>
+                            </constraints>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PwS-dU-ouf">
+                            <rect key="frame" x="10" y="147.5" width="365" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="FGl-BY-VVA"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="BZN-tv-Ggw" secondAttribute="height" multiplier="3:1" id="p9a-6o-QWr"/>
+                        <constraint firstAttribute="bottom" secondItem="BZN-tv-Ggw" secondAttribute="bottom" id="0hw-hj-r1u"/>
+                        <constraint firstAttribute="width" secondItem="QnG-W3-tgJ" secondAttribute="height" multiplier="2:1" id="5ZA-Vg-1lO"/>
+                        <constraint firstAttribute="trailing" secondItem="PwS-dU-ouf" secondAttribute="trailing" id="8qZ-rs-foE"/>
+                        <constraint firstItem="BZN-tv-Ggw" firstAttribute="top" secondItem="QnG-W3-tgJ" secondAttribute="top" id="H2j-bf-dnJ"/>
+                        <constraint firstAttribute="trailing" secondItem="FAS-uG-9Eg" secondAttribute="trailing" id="MSi-q3-hES"/>
+                        <constraint firstAttribute="trailing" secondItem="BZN-tv-Ggw" secondAttribute="trailing" id="ada-xc-XZB"/>
+                        <constraint firstAttribute="bottom" secondItem="PwS-dU-ouf" secondAttribute="bottom" id="bWl-Hc-S4L"/>
+                        <constraint firstItem="PwS-dU-ouf" firstAttribute="leading" secondItem="QnG-W3-tgJ" secondAttribute="leading" constant="10" id="eXf-n3-sTd"/>
+                        <constraint firstAttribute="bottom" secondItem="FAS-uG-9Eg" secondAttribute="bottom" id="hNA-ub-u0I"/>
+                        <constraint firstItem="BZN-tv-Ggw" firstAttribute="leading" secondItem="QnG-W3-tgJ" secondAttribute="leading" id="l8F-SN-Fw0"/>
+                        <constraint firstItem="FAS-uG-9Eg" firstAttribute="leading" secondItem="QnG-W3-tgJ" secondAttribute="leading" id="z4L-Mi-tcd"/>
                     </constraints>
-                </imageView>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="APN-j2-wlt">
-                    <rect key="frame" x="0.0" y="145" width="375" height="312"/>
+                    <rect key="frame" x="0.0" y="207.5" width="375" height="312"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="标题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWY-Ty-xbN">
                             <rect key="frame" x="10" y="10" width="365" height="21"/>
@@ -88,9 +121,9 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w9z-xW-QHc">
-                    <rect key="frame" x="30" y="467" width="315" height="30"/>
+                    <rect key="frame" x="30" y="529.5" width="315" height="44"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="vdh-y6-SiH"/>
+                        <constraint firstAttribute="height" constant="44" id="vdh-y6-SiH"/>
                     </constraints>
                     <state key="normal" title="Button"/>
                     <connections>
@@ -100,15 +133,15 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="APN-j2-wlt" firstAttribute="top" secondItem="BZN-tv-Ggw" secondAttribute="bottom" id="2uZ-Lc-A2p"/>
+                <constraint firstItem="APN-j2-wlt" firstAttribute="top" secondItem="QnG-W3-tgJ" secondAttribute="bottom" id="1mv-kV-Hgh"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="APN-j2-wlt" secondAttribute="trailing" id="3rT-Ls-8IJ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="w9z-xW-QHc" secondAttribute="bottom" constant="10" id="IvT-2p-HYJ"/>
-                <constraint firstItem="BZN-tv-Ggw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="JBb-dM-VjB"/>
                 <constraint firstItem="w9z-xW-QHc" firstAttribute="top" secondItem="APN-j2-wlt" secondAttribute="bottom" constant="10" id="Lqd-OX-GT4"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="w9z-xW-QHc" secondAttribute="trailing" constant="30" id="YMW-t7-8d9"/>
-                <constraint firstItem="BZN-tv-Ggw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="gD3-68-yr6"/>
-                <constraint firstItem="BZN-tv-Ggw" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="h7q-Fu-mDx"/>
+                <constraint firstItem="QnG-W3-tgJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="fAK-gI-Sk8"/>
+                <constraint firstAttribute="trailing" secondItem="QnG-W3-tgJ" secondAttribute="trailing" id="gy8-4E-eFS"/>
                 <constraint firstItem="APN-j2-wlt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="qvE-d4-OTy"/>
+                <constraint firstItem="QnG-W3-tgJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uz9-Ok-L2r"/>
                 <constraint firstItem="w9z-xW-QHc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="v49-JC-vMB"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
@@ -116,6 +149,6 @@
         </view>
     </objects>
     <resources>
-        <image name="640x960" width="640" height="960"/>
+        <image name="banner2" width="960" height="473"/>
     </resources>
 </document>
