--- a/Service/主界面/SEMainCollectionViewCell.xib
+++ b/Service/主界面/SEMainCollectionViewCell.xib
@@ -37,6 +37,7 @@
                     </label>
                 </subviews>
             </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="gOv-bI-NmB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="6SB-Un-Sak"/>
                 <constraint firstItem="gOv-bI-NmB" firstAttribute="top" secondItem="kin-X3-eta" secondAttribute="bottom" constant="5" id="7OO-jN-NRR"/>
