--- a/Service/主界面/SEMainCollectionViewCell.xib
+++ b/Service/主界面/SEMainCollectionViewCell.xib
@@ -27,12 +27,12 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOv-bI-NmB">
-                        <rect key="frame" x="10" y="111" width="136" height="21"/>
+                        <rect key="frame" x="10" y="116" width="136" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="wdb-d2-LLR"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -40,7 +40,7 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="gOv-bI-NmB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="6SB-Un-Sak"/>
-                <constraint firstItem="gOv-bI-NmB" firstAttribute="top" secondItem="kin-X3-eta" secondAttribute="bottom" constant="5" id="7OO-jN-NRR"/>
+                <constraint firstItem="gOv-bI-NmB" firstAttribute="top" secondItem="kin-X3-eta" secondAttribute="bottom" constant="10" id="7OO-jN-NRR"/>
                 <constraint firstItem="kin-X3-eta" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="9AG-he-fk1"/>
                 <constraint firstItem="kin-X3-eta" firstAttribute="centerY" secondItem="ZTg-uK-7eu" secondAttribute="centerY" id="Tyv-Ne-Jtx"/>
                 <constraint firstAttribute="trailing" secondItem="gOv-bI-NmB" secondAttribute="trailing" constant="10" id="aHo-Fs-eBK"/>
